--- a/myapp/package.json
+++ b/myapp/package.json
@@ -6,10 +6,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-latex": "^2.0.3",
     "d3": "^7.9.0",
+    "katex": "^0.16.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-mathjax": "^2.0.5",
+    "react-katex": "^3.0.1",
+    "react-latex": "^2.0.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
