Work in Progress for Cache Simulator

--- a/myapp/package.json
+++ b/myapp/package.json
@@ -7,15 +7,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-latex": "^2.0.3",
+    "@xyflow/react": "^12.3.4",
     "d3": "^7.9.0",
     "katex": "^0.16.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flow-renderer": "^10.3.17",
     "react-hook-mathjax": "^2.0.5",
     "react-katex": "^3.0.1",
     "react-latex": "^2.0.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "reactflow": "^11.11.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
