--- a/myapp/package.json
+++ b/myapp/package.json
@@ -12,6 +12,7 @@
     "@types/react-latex": "^2.0.3",
     "@xyflow/react": "^12.3.4",
     "chart.js": "^4.4.6",
+    "chartjs-plugin-annotation": "^3.1.0",
     "d3": "^7.9.0",
     "katex": "^0.16.11",
     "react": "^18.3.1",
