--- a/myapp/package.json
+++ b/myapp/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Hit2737.github.io/COA_GUI_Tool_Project",
+  "homepage": "https://Hit2737.github.io/COA_Learning_Application",
   "name": "myapp",
   "version": "0.1.0",
   "private": true,
